2014-12-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated with more improvements since previous release.

	* coders/palm.c (WritePALMImage): Log header details.

	* coders/pdb.c: PDB reader and writer need to be more robust when
	calculating packets and buffer allocation.  Also log header
	details.  Problem was reported by Hanno Böck.

2014-12-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated with more improvements since previous release.

	* ttf: Update bundled Freetype to 2.5.4.

	* png: Update bundled libpng to 1.6.16.

2014-12-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): The libtiff JBIG coder only
	supports strip images, and fails when scanlines are requested.
	Force use of stripped read method when the file uses JBIG
	compression.  It is still not possible to write JBIG compressed
	TIFF files since there is not yet a strip writer.  Problem
	reported by Yuriy Kaminskiyon via the GM-bugs mailing list on
	2014-12-22.

2014-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (QuantumTransferMode): Fix quantum transfer
	handling for photometrics which might deliver one or three samples
	per pixel.  These were assuming that three samples were always
	provided.

2014-12-21  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c: Impose a 10-million limit on dimensions
	when reading a PNG file.

2014-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated with improvements since previous release.

2014-12-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/statistics.c (GetImageStatistics): Failed to compute
	statistics for the Black channel of CMYK image files.  Problem
	reported by Michael Below via Debian bug 773552:
	"graphicsmagick-imagemagick-compat: convert to cmyk leaves k
	channel empty".

2014-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
